# cebal

./: .clang-format  CMakeLists.txt  Makefile  README.md
cebal/: CMakeLists.txt  main.cpp
cebal/core/: CMakeLists.txt  queue.cpp  queue.h  thread_pool.cpp  thread_pool.h
